syntax = "proto3";

option go_package = "github.ibm.com/decentralized-trust-research/scalable-committer/wgclient/workload/v1";

package workload_v1;

import "token/token.proto";
import "coordinatorservice/coordinator_service.proto";

message BlockWithExpectedResult {
  token.Block block = 1;
  repeated coordinatorservice.TxValidationStatus expectedResults = 2;
}